samples/_failures_safe/1761073565_1ba615_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e947d7f9.c: In function ‘main’:
./samples/SAFE/__tmp_e947d7f9.c:154:13: error: expected expression at end of input
  154 |             mat1.cols = read_int("Enter columns for matrix A (1-10): ",
      |             ^~~~
./samples/SAFE/__tmp_e947d7f9.c:154:25: error: too few arguments to function ‘read_int’
  154 |             mat1.cols = read_int("Enter columns for matrix A (1-10): ",
      |                         ^~~~~~~~
./samples/SAFE/__tmp_e947d7f9.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_e947d7f9.c:154:13: error: expected declaration or statement at end of input
  154 |             mat1.cols = read_int("Enter columns for matrix A (1-10): ",
      |             ^~~~
./samples/SAFE/__tmp_e947d7f9.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e947d7f9.c:154:13: error: expected declaration or statement at end of input
